--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,98 +4,135 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>MyGameCollection</title>
 
     <!-- Bootstrap -->
-    <link
-            href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-            rel="stylesheet">
-    <link href="../static/css/style.css" th:href="@{/css/style.css}"
-          rel="stylesheet" />
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link th:href="@{/css/style.css}" rel="stylesheet" />
 </head>
+
 <body>
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
+
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed"
                     data-toggle="collapse" data-target="#navbar" aria-expanded="false"
                     aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span> <span
-                    class="icon-bar"></span> <span class="icon-bar"></span> <span
-                    class="icon-bar"></span>
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
             </button>
+
             <a class="navbar-brand" href="/">MyGameCollection</a>
         </div>
+
         <div>
             <form class="form-inline" th:action="@{/}">
                 <div class="form-group mx-sm-3 mb-2">
-                    <input type="text" name="palabraClave" class="form-control" id="palabraClave" th:value="${palabraClave}" placeholder="nombre o parte de la observacion (sensible a mayusculas y minusculas)" required size="75">
+                    <input type="text"
+                           name="palabraClave"
+                           class="form-control"
+                           id="palabraClave"
+                           th:value="${palabraClave}"
+                           placeholder="Buscar título"
+                           size="75">
                 </div>
-                <input type="submit" class="btn btn-primary mb-2" value="buscar">
+                <input type="submit" class="btn btn-primary mb-2" value="Buscar">
             </form>
         </div>
+
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown"><a href="#" class="dropdown-toggle"
-                                        data-toggle="dropdown" role="button" aria-haspopup="true"
-                                        aria-expanded="false">Opciones <span class="caret"></span></a>
+
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle"
+                       data-toggle="dropdown" role="button"
+                       aria-haspopup="true" aria-expanded="false">
+                        Opciones <span class="caret"></span>
+                    </a>
+
                     <ul class="dropdown-menu">
-                        <li><a href="admin/list-plataforma.html"
-                               th:href="@{/admin/plataforma/}">Gestión de plataformas</a></li>
-                        <li><a href="admin/list-titulo.html"
-                               th:href="@{/admin/titulo/}">Gestión de titulos</a></li>
-                    </ul></li>
+                        <li>
+                            <a th:href="@{/admin/plataforma/}">
+                                Gestión de plataformas
+                            </a>
+                        </li>
+                        <li>
+                            <a th:href="@{/admin/titulo/}">
+                                Gestión de títulos
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+
             </ul>
         </div>
     </div>
 </nav>
 
+
 <div class="container-fluid">
     <div class="row">
+
+        <!-- Sidebar plataformas -->
         <div class="col-sm-3 col-md-2 sidebar">
             <h3>Plataformas</h3>
             <ul class="nav nav-sidebar">
-                <li th:each="plataforma : ${plataformas}"><a href="#"
-                                                       th:href="@{/(idPlataforma=${plataforma.id})}"
-                                                       th:text="${plataforma.nombre}">plataforma</a></li>
+
+                <li th:each="plataforma : ${plataformas}">
+                    <a th:href="@{/(idPlataforma=${plataforma.id})}"
+                       th:text="${plataforma.nombre}">
+                        Plataforma
+                    </a>
+                </li>
+
             </ul>
         </div>
 
+        <!-- Títulos -->
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h1>Nuestros titulos: </h1>
+
+            <h1>Nuestros títulos:</h1>
+
             <div class="row">
+
                 <div class="col-sm-3" th:each="titulo : ${titulos}">
-                    <a href="#" th:href="@{/titulo/{id}(id=${titulo.id})}">
+                    <a th:href="@{/titulo/{id}(id=${titulo.id})}">
+
                         <div class="col-item">
+
                             <div class="photo">
-                                <img src="http://placehold.it/350x260"
-                                     th:src="${#strings.isEmpty(titulo.imagen)} ? 'http://placehold.it/350x260' : ${titulo.imagen}"
-                                     class="img-responsive" alt="a" />
+                                <img class="img-responsive"
+                                     th:src="${#strings.isEmpty(titulo.imagen)} ?
+                                           '/img/notfound.png' : '/img/games/' + ${titulo.imagen}"
+                                     alt="Imagen del juego">
                             </div>
+
                             <div class="info">
+                                <h4 class="product-name" th:text="${titulo.nombre}">
+                                    Nombre del juego
+                                </h4>
                             </div>
                         </div>
                     </a>
                 </div>
+
             </div>
+
         </div>
+
     </div>
 </div>
 
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script
-        src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+<!-- Bootstrap JS -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </body>
 </html>
