--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -29,8 +29,26 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
              aria-haspopup="true" aria-expanded="false">Opciones <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a th:href="@{/admin/plataforma/}">Gestión de plataformas</a></li>
-            <li><a th:href="@{/admin/titulo/}">Gestión de títulos</a></li>
+            <li>
+              <a th:href="@{/admin/plataforma/}">
+                Gestión de plataformas
+              </a>
+            </li>
+            <li>
+              <a th:href="@{/admin/titulo/}">
+                Gestión de títulos
+              </a>
+            </li>
+            <li>
+              <a th:href="@{/admin/genero/}">
+                Gestión de generos
+              </a>
+            </li>
+            <li>
+              <a th:href="@{/admin/region/}">
+                Gestión de regiones
+              </a>
+            </li>
           </ul>
         </li>
       </ul>
