--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -65,6 +65,16 @@
                                 Gestión de títulos
                             </a>
                         </li>
+                        <li>
+                            <a th:href="@{/admin/genero/}">
+                                Gestión de generos
+                            </a>
+                        </li>
+                        <li>
+                            <a th:href="@{/admin/region/}">
+                                Gestión de regiones
+                            </a>
+                        </li>
                     </ul>
                 </li>
 
