--- a/src/main/resources/templates/admin/list-titulo.html
+++ b/src/main/resources/templates/admin/list-titulo.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Titulos</title>
-
+    <title>Títulos</title>
 
     <!-- Bootstrap -->
     <link
@@ -15,18 +13,16 @@
     <link href="../../static/css/style.css" th:href="@{/css/style.css}"
           rel="stylesheet" />
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
     <style>
         body {
-            margin-top: 20px;
+            margin-top: 70px;
         }
     </style>
-
 </head>
 <body>
 
@@ -36,23 +32,42 @@
             <button type="button" class="navbar-toggle collapsed"
                     data-toggle="collapse" data-target="#navbar" aria-expanded="false"
                     aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span> <span
-                    class="icon-bar"></span> <span class="icon-bar"></span> <span
-                    class="icon-bar"></span>
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="/">MyGameCollection</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown"><a href="#" class="dropdown-toggle"
-                                        data-toggle="dropdown" role="button" aria-haspopup="true"
-                                        aria-expanded="false">Opciones <span class="caret"></span></a>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle"
+                       data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false">Opciones <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/admin/plataforma/" th:href="@{/admin/plataforma/}">Gestión
-                            de plataformas</a></li>
-                        <li><a href="/admin/titulo/" th:href="@{/admin/titulo/}">Gestión
-                            de titulos</a></li>
-                    </ul></li>
+                        <li>
+                            <a th:href="@{/admin/plataforma/}">
+                                Gestión de plataformas
+                            </a>
+                        </li>
+                        <li>
+                            <a th:href="@{/admin/titulo/}">
+                                Gestión de títulos
+                            </a>
+                        </li>
+                        <li>
+                            <a th:href="@{/admin/genero/}">
+                                Gestión de géneros
+                            </a>
+                        </li>
+                        <li>
+                            <a th:href="@{/admin/region/}">
+                                Gestión de regiones
+                            </a>
+                        </li>
+                    </ul>
+                </li>
             </ul>
         </div>
 
@@ -62,25 +77,42 @@
 <div class="container">
     <div class="row">
         <div class="col-md-offset-1 col-md-10">
-            <div class="pull-right">
-                <a href="form-titulo.html" th:href="@{/admin/titulo/nuevo}"
-                   class="btn btn-primary">Nueva titulo</a>
 
+            <div class="pull-right" style="margin-bottom: 15px;">
+                <a th:href="@{/admin/titulo/nuevo}"
+                   class="btn btn-primary">Nuevo título</a>
             </div>
 
-            <table class="table">
+            <h1>Listado de títulos</h1>
+
+            <table class="table table-striped">
                 <thead>
                 <tr>
                     <th>Nombre</th>
-                    <th>Operaciones</th>
+                    <th style="width: 220px;">Operaciones</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr th:each="titulo : ${titulos}">
-                    <td th:text="${titulo.nombre}"></td>
-                    <td class="operaciones"><a href="#" class="btn btn-primary">Editar</a>
-                        <button type="button" class="btn btn-danger" data-toggle="modal"
-                                data-target="#delete-modal">Borrar</button></td>
+                    <td th:text="${titulo.nombre}">Nombre del título</td>
+                    <td class="operaciones">
+
+                        <!-- Editar -->
+                        <a th:href="@{/admin/titulo/editar/{id}(id=${titulo.id})}"
+                           class="btn btn-primary">
+                            Editar
+                        </a>
+
+                        <!-- Borrar: abre modal -->
+                        <button type="button"
+                                class="btn btn-danger"
+                                data-toggle="modal"
+                                data-target="#delete-modal"
+                                th:attr="data-id=${titulo.id},data-nombre=${titulo.nombre}">
+                            Borrar
+                        </button>
+
+                    </td>
                 </tr>
                 </tbody>
             </table>
@@ -88,31 +120,65 @@
     </div>
 </div>
 
+<!-- Modal de borrado -->
 <div class="modal fade" id="delete-modal" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
+
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"
                         aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title">Borrar titulo</h4>
+                <h4 class="modal-title">Borrar título</h4>
             </div>
-            <div class="modal-body">
-                <p>¿Está usted seguro de borrar este titulo?</p>
-                <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
-                <a href="#" class="btn btn-danger">Sí</a>
-            </div>
-        </div>
 
+            <div class="modal-body">
+                <p>
+                    ¿Está usted seguro de borrar el título
+                    <strong id="titulo-nombre"></strong>?
+                </p>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button"
+                        class="btn btn-default"
+                        data-dismiss="modal">No</button>
+
+                <!-- Enlace que se rellenará por JS -->
+                <a href="#"
+                   class="btn btn-danger"
+                   id="confirmDeleteTitulo">
+                    Sí
+                </a>
+            </div>
+
+        </div>
     </div>
 </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
 <script
         src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+<script>
+    // -------- Modal de borrado para títulos --------
+    $('#delete-modal').on('show.bs.modal', function (event) {
+        var button = $(event.relatedTarget);     // Botón que abrió el modal
+        var id = button.data('id');              // data-id
+        var nombre = button.data('nombre');      // data-nombre
+
+        // Insertar el nombre en el modal
+        $('#titulo-nombre').text(nombre);
+
+        // Construir la URL de borrado
+        var url = '/admin/titulo/borrar/' + id;
+
+        // Asignar la URL al botón "Sí"
+        $('#confirmDeleteTitulo').attr('href', url);
+    });
+</script>
 
 </body>
 </html>
