Correcciones de textos, crud de titulos completado, inicio del apartado de copias de seguridad.

--- a/src/main/resources/templates/admin/list-plataforma.html
+++ b/src/main/resources/templates/admin/list-plataforma.html
@@ -71,6 +71,11 @@
                 Gestión de regiones
               </a>
             </li>
+            <li>
+              <a th:href="@{/admin/importar-exportar}">
+                Importar y exportar
+              </a>
+            </li>
           </ul>
         </li>
       </ul>
@@ -90,6 +95,8 @@
           Nueva plataforma
         </a>
       </div>
+
+      <h1>Listado de plataformas</h1>
 
       <table class="table table-striped">
         <thead>
