--- a/src/main/resources/templates/admin/list-region.html
+++ b/src/main/resources/templates/admin/list-region.html
@@ -48,6 +48,7 @@
                         <li><a th:href="@{/admin/titulo/}">Gestión de títulos</a></li>
                         <li><a th:href="@{/admin/genero/}">Gestión de géneros</a></li>
                         <li><a th:href="@{/admin/region/}">Gestión de regiones</a></li>
+                        <li><a th:href="@{/admin/importar-exportar}">Importar y exportar</a></li>
                     </ul>
                 </li>
             </ul>
