--- a/src/main/resources/templates/admin/list-genero.html
+++ b/src/main/resources/templates/admin/list-genero.html
@@ -71,6 +71,11 @@
                                 Gestión de regiones
                             </a>
                         </li>
+                        <li>
+                            <a th:href="@{/admin/importar-exportar}">
+                                Importar y exportar
+                            </a>
+                        </li>
                     </ul>
                 </li>
             </ul>
@@ -90,6 +95,8 @@
                     Nuevo género
                 </a>
             </div>
+
+            <h1>Listado de generos</h1>
 
             <table class="table table-striped">
                 <thead>
