--- a/src/main/resources/templates/admin/list-titulo.html
+++ b/src/main/resources/templates/admin/list-titulo.html
@@ -10,6 +10,7 @@
     <link
             href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
             rel="stylesheet">
+
     <link href="../../static/css/style.css" th:href="@{/css/style.css}"
           rel="stylesheet" />
 
@@ -30,8 +31,8 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed"
-                    data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-                    aria-controls="navbar">
+                    data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -39,33 +40,21 @@
             </button>
             <a class="navbar-brand" href="/">MyGameCollection</a>
         </div>
+
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle"
-                       data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Opciones <span class="caret"></span></a>
+                       data-toggle="dropdown" role="button"
+                       aria-haspopup="true" aria-expanded="false">
+                        Opciones <span class="caret"></span>
+                    </a>
                     <ul class="dropdown-menu">
-                        <li>
-                            <a th:href="@{/admin/plataforma/}">
-                                Gestión de plataformas
-                            </a>
-                        </li>
-                        <li>
-                            <a th:href="@{/admin/titulo/}">
-                                Gestión de títulos
-                            </a>
-                        </li>
-                        <li>
-                            <a th:href="@{/admin/genero/}">
-                                Gestión de géneros
-                            </a>
-                        </li>
-                        <li>
-                            <a th:href="@{/admin/region/}">
-                                Gestión de regiones
-                            </a>
-                        </li>
+                        <li><a th:href="@{/admin/plataforma/}">Gestión de plataformas</a></li>
+                        <li><a th:href="@{/admin/titulo/}">Gestión de títulos</a></li>
+                        <li><a th:href="@{/admin/genero/}">Gestión de géneros</a></li>
+                        <li><a th:href="@{/admin/region/}">Gestión de regiones</a></li>
+                        <li><a th:href="@{/admin/importar-exportar}">Importar y exportar</a></li>
                     </ul>
                 </li>
             </ul>
@@ -76,11 +65,14 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-offset-1 col-md-10">
+        <!-- 🔥 MISMO TAMAÑO QUE GÉNEROS -->
+        <div class="col-md-offset-2 col-md-8">
 
             <div class="pull-right" style="margin-bottom: 15px;">
                 <a th:href="@{/admin/titulo/nuevo}"
-                   class="btn btn-primary">Nuevo título</a>
+                   class="btn btn-primary">
+                    Nuevo título
+                </a>
             </div>
 
             <h1>Listado de títulos</h1>
@@ -97,13 +89,11 @@
                     <td th:text="${titulo.nombre}">Nombre del título</td>
                     <td class="operaciones">
 
-                        <!-- Editar -->
                         <a th:href="@{/admin/titulo/editar/{id}(id=${titulo.id})}"
                            class="btn btn-primary">
                             Editar
                         </a>
 
-                        <!-- Borrar: abre modal -->
                         <button type="button"
                                 class="btn btn-danger"
                                 data-toggle="modal"
@@ -116,6 +106,7 @@
                 </tr>
                 </tbody>
             </table>
+
         </div>
     </div>
 </div>
@@ -126,9 +117,8 @@
         <div class="modal-content">
 
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"
-                        aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
+                <button type="button" class="close" data-dismiss="modal">
+                    <span>&times;</span>
                 </button>
                 <h4 class="modal-title">Borrar título</h4>
             </div>
@@ -143,9 +133,9 @@
             <div class="modal-footer">
                 <button type="button"
                         class="btn btn-default"
-                        data-dismiss="modal">No</button>
-
-                <!-- Enlace que se rellenará por JS -->
+                        data-dismiss="modal">
+                    No
+                </button>
                 <a href="#"
                    class="btn btn-danger"
                    id="confirmDeleteTitulo">
@@ -157,26 +147,18 @@
     </div>
 </div>
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<!-- JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script
-        src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 <script>
-    // -------- Modal de borrado para títulos --------
     $('#delete-modal').on('show.bs.modal', function (event) {
-        var button = $(event.relatedTarget);     // Botón que abrió el modal
-        var id = button.data('id');              // data-id
-        var nombre = button.data('nombre');      // data-nombre
+        var button = $(event.relatedTarget);
+        var id = button.data('id');
+        var nombre = button.data('nombre');
 
-        // Insertar el nombre en el modal
         $('#titulo-nombre').text(nombre);
-
-        // Construir la URL de borrado
-        var url = '/admin/titulo/borrar/' + id;
-
-        // Asignar la URL al botón "Sí"
-        $('#confirmDeleteTitulo').attr('href', url);
+        $('#confirmDeleteTitulo').attr('href', '/admin/titulo/borrar/' + id);
     });
 </script>
 
